<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent">
    <!-- https://www.tutorialspoint.com/how-can-i-make-my-layout-scroll-vertically-in-android -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!-- TODO: As a group we need to define a standard event poster size so this
            can be scaled properly -->
            <ImageButton
                android:id="@+id/o_postEvent_addImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/light_purple"
                app:srcCompat="@drawable/upload_image_icon" />

            <TextView
                android:id="@+id/o_postevent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="Event Details"
                android:textColor="@color/title_text"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/o_postEvent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Name"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_name_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Name"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_postEvent_dataTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Date &amp; Time"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_dataTime_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Date &amp; Time"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:clickable="false"
                android:focusable="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_postEvent_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Price (CAD)"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_price_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Price"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_postEvent_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Location"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_location_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Location"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_postEvent_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Description"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_description_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Description"
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_postEvent_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Entrant Limit (optional)"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_limit_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Limit"
                android:inputType="number"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/o_postEvent_winners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Number of Winners"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/o_postEvent_winners_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Event Number of Winners"
                android:inputType="number"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/o_postEvent_geolocation_check"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:checked="false"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Enable Geolocation"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />

            <Button
                android:id="@+id/o_postEvent_post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/main_buton"
                android:text="Create Event"
                android:textColor="@color/main_button_text" />

            <!-- this is only added for testing an serves no purpose other that a
            reference to the bottom of the screen -->
            <TextView
                android:id="@+id/o_postEvent_bottom_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>