...
    <argument
        android:name="signedInAccount"
        app:argType="com.example.pygmyhippo.common.Account" />
</fragment>

<fragment
    android:id="@+id/organiser_postEvent_page"
    android:name="com.example.pygmyhippo.organizer.PostEventFragment"
    android:label="@string/title_post_event"
    tools:layout="@layout/organiser_post_event"
    android:background="@color/dark_purple">
    <argument
        android:name="signedInAccount"
        app:argType="com.example.pygmyhippo.common.Account" />
    <action
        android:id="@+id/action_organiser_postEvent_page_to_view_eventqr_fragment"
        app:destination="@id/view_eventqr_fragment" />
</fragment>

    <fragment
        android:id="@+id/view_eventqr_fragment"
        android:name="com.example.pygmyhippo.organizer.EventQRViewerFragment"
        android:label="view QR"
...
